--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body.light-theme {
 }
 
 body.dark-theme {
-  background-color: f9f7fe;
+  background-color: #f9f7fe;
   color: black;
 }
 .change-theme {
